Frontend/web-frontend/overlays/production/limits.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-frontend
spec:
  template:
    spec:
      containers:
      - name: web-frontend
        resources:
          limits:
            cpu: 200m
            memory: 250Mi
          requests:
            cpu: 120m
            memory: 150Mi
