Frontend/web-frontend/overlays/production/tolerations.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-frontend
spec:
  template:
    spec:
      tolerations:
        - key: "dedicated"
          operator: "Equal"
          value: "prod"
          effect: "NoSchedule"
